[package]
name = "winit-runtime"
description = "Async winit runtime"
version = "0.2.0-beta"
edition = "2021"
license = "MIT"
authors = ["storycraft <storycraft@pancake.sh>"]
repository = "https://github.com/storycraft/winit-runtime"
keywords = ["windowing", "winit", "async", "runtime"]
categories = ["asynchronous"]
rust-version = "1.72.0"

[dependencies]
winit = "0.29.1-beta"
parking_lot = "0.12.1"
async-task = "4.4.0"
futures-lite = "1.13.0"
scoped-tls-hkt = "0.1.2"
futures-intrusive = "0.5.0"
instant = "0.1.12"
event-source = "0.2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
